# clash-config-proxy

./: .env  .gitignore  Cargo.toml  README.md  config.example.yaml  config.yaml.example
.github/workflows/: build.yml
migrations/2022-11-07-070549_create_configs/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
