[package]
name = "clash-config-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
awc = { version = "3.0.0", features = ["rustls"] }
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
